# GoT

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  renovate.json  tasks.txt
.github/workflows/: check.yml  deploy.yml
GoT/: __init__.py  __main__.py  graph_model.py  ollama_llm.py  runtime_graph.py  utils.py
GoT/agent_tools/: runtime_graph_tool.py  web_tool.py
GoT/cli/: parse_args.py
GoT/core/: graph_model.py  llm.py
GoT/experiments/: hf_formatter.py  lm_wrapper.py
GoT/model/: graph_model.py  lm_wrapper.py  ollama_llm.py  runtime_graph.py
GoT/model/utils/: hf_formatter.py  parse_args.py  utils.py
GoT/tools/: craft_tool.py  math_tool.py  runtime_graph_tool.py  web_tool.py
GoT/utils/: utils.py
tests/: test_my_class.py
