[tool.poetry]
name = "GoT"
packages = [
    { include = "GoT" },
]
version = "2.4.1"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">= 3.10.0 < 3.14.0"
langchain = {extras = ["google-genai", "openai"], version = "^1.2.11"}
langchain-openai = "^1.1.7"
langgraph = "^1.0.6"
dotenv = "^0.9.9"
mlflow = "^3.9.0"
lm-eval = {extras = ["math"], version = "^0.4.11"}
boto3 = "^1.42.51"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.3.5"
ruff = "^0.14.8"

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy GoT tests"
compile = "python -m compileall GoT tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["lm_eval.*", "datasets.*", "sympy.*"]
follow_untyped_imports = true
